Downgrade to java 11 due to issue with jitpack.io. Fixes compile issue